# epijats

./: .gitignore  Makefile  README.md  gen_webstracts.py  justfile  mypy.ini  pyproject.toml  setup.cfg
compat/csl/: gen_pandoc_references.py
compat/html/: README.md  style.html
compat/html/cathead/: head.html
compat/html/domparse/: diff-domparse.sh  package-lock.json
compat/html/domparse/src/: index.ts
compat/jats/: baseprint-to-jats.xsl
compat/pmc/: curate_test_articles.py  fastindex.py  tally_mathml.py  tally_references.py
epijats/: __init__.py  __main__.py  article.py  baseprint.py  biblio.py  condition.py  doc.py  document.py  dom.py  elements.py  elife.py  eprint.py  html.py  jats.py  jinja.py  math.py  parse.py  pdf.py  reformat.py  restyle.py  succession.py  tree.py  util.py  webstract.py  xml.py
epijats/csl/: abridged.csl  full-preview.csl
epijats/dom/: __init__.py  article.py  elements.py
epijats/pandoc/: webstract.tmpl
epijats/parse/: back.py  baseprint.py  body.py  content.py  front.py  htmlish.py  jats.py  kit.py  math.py  models.py  references.py  tree.py
epijats/static/: article.css  webpaper.css
epijats/templates/: abstract.pandoc  article.html.jinja  base.html.jinja  pandoc.css
epijats/templates/epijats/: _common.html.jinja  boston.html.jinja  lyon.html.jinja  quebec.html.jinja
epijats/templates/style/: boston.html.jinja  lyon.html.jinja
epijats/xml/: baseprint.py  format.py  html.py
tests/: __init__.py  full-preview.csl  test_baseprint.py  test_biblio.py  test_cli.py  test_dom.py  test_git.py  test_html.py  test_jsoml.py  test_webstracts.py
tests/cases/: test_succession_archive.bundle
tests/cases/article/PMC11784394/: restyle.xml
tests/cases/article/blocks/: body.html  restyle.xml
tests/cases/article/cite_in_abstract/: article.xml
tests/cases/article/commonmark/: article.xml
tests/cases/article/jats/: body.html  restyle.xml
tests/cases/article/jats_def_list/: restyle.xml
tests/cases/article/linadmixt/: restyle.xml
tests/cases/article/math1/: restyle.xml
tests/cases/article/missing_content/: article.xml
tests/cases/article/multicite/: article.xml  restyle.xml
(+60 files in other folders)
