[metadata]
name = epijats
version = 0.4.1
author = Castedo Ellerman
author_email = castedo@castedo.com
description =
  E-Printing Identified JATS
url = https://gitlab.com/popgen.es/epijats
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
python_requires = >=3.6
packages = epijats
install_requires =
    setuptools
    jinja2
    elifetools
    weasyprint
